welcome.lessons.welcome.bat.bool2.NearTen.scala.error
nearTen:3: error: value =< is not a member of Int
  return ((n=<12)&&(n>=8))
            ^