welcome.lessons.welcome.bat.bool2.NearTen.scala.code
def nearTen(num:Int):Boolean = {
  var n = num%10
  return ((n=<12)&&(n>=8))
}